# EPI

./: CMakeLists.txt  CMakeLists.txt~  EPI.cpp  EPI.h  count_bits.cpp  power.cpp  reverse_bits.cpp
Headers/: primitive.h
Primitive/: README.md  closest_int_same_bit_count.cpp  multiply.cpp  orientation.cpp  parity.cpp  rectangle_intersection.cpp  reverse_digits.cpp  swap_bits.cpp  uniform_random.cpp
src/: EPI.cpp  EPI.h
src/Arrays/: README.md  buy_and_sell_stock.cpp  dnfp.cpp  even_odd.cpp  naive_dnfp.cpp  reorder_even_odd.cpp
src/Headers/: arrays.h  primitive.h  utilities.h
src/Primitive/: README.md  closest_int_same_bit_count.cpp  count_bits.cpp  division.cpp  is_palindromic.cpp  multiply.cpp  parity.cpp  rectangle_intersection.cpp  reverse_bits.cpp  swap_bits.cpp
src/Utilities/: README.md  get_int_array.cpp
